[package]
name = "actionkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
crc32fast = "1.4.0"
serde = "1.0.198"
serde_derive = "1.0.198"

# There can only be one library per crate
[lib]
name = "libactionkv"
path = "src/lib.rs"

# There can be many binaries per crate
[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"
