[package]
name = "fledge_0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootimage = "0.10.3"
bootloader = "0.11.7"
cargo-binutils = "0.3.6"
x86_64 = "0.15.1"

[package.metadata.bootimage]
build-command =["build"]
run-command = [
    "quemu-system-x86_64", "-drive", "format=raw,file={}"
]
